k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: safesoundarena
spec:
  replicas: 3
  selector:
    matchLabels:
      app: safesoundarena
  template:
    metadata:
      labels:
        app: safesoundarena
    spec:
      containers:
        - name: safesoundarena
          image: your-dockerhub/safesoundarena:latest
          ports:
            - containerPort: 3000
