k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: safesoundarena-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: safesoundarena
